--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
     "prefix": "s!",
-    "token": "Njk5NzE2ODUwNjI3NTEwMzA0.XpYcGQ.K205TkPfneKDmyBHU-uV1_GoiTI",
+    "token": "TOKEN",
     "httpPassword": "111",
     "devID": "440271111574388757",
     "entryConfig": {
